[package]
name = "parachute"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Just in time transcoder / transmuxer"
keywords = ["ffmpeg"]
repository = "https://github.com/SarimDEV/parachute"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
